--- a/ProgFInalProject/nbproject/private/private.properties
+++ b/ProgFInalProject/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\xsyed\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=C:\\Users\\darth\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
