--- a/ProgFInalProject/nbproject/project.properties
+++ b/ProgFInalProject/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProgFInalProject
-main.class=progfinalproject.ProgFInalProject
+main.class=progfinalproject.MainController
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
